--- a/index.html
+++ b/index.html
@@ -1,53 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Class 6 Area & Perimeter Test</title>
-
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background: #f2f4f7;
-    padding: 20px;
-}
-.quiz-box {
-    background: white;
-    padding: 25px;
-    max-width: 750px;
-    margin: auto;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.timer {
-    color: red;
-    font-weight: bold;
-}
-.options label {
-    display: block;
-    margin: 8px 0;
-}
-button {
-    margin-top: 15px;
-    padding: 10px 20px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.correct { color: green; font-weight: bold; }
-.wrong { color: red; font-weight: bold; }
-</style>
-</head>
-
-<body>
-
-<div class="quiz-box" id="quizBox">
-    <h2 id="question"></h2>
-    <div class="timer">Time Left: <span id="time">120</span> sec</div>
-    <div id="options" class="options"></div>
-    <button onclick="nextQuestion()">Next</button>
-</div>
-
 <script>
 const quiz = [
     {
@@ -56,102 +6,99 @@ const quiz = [
         answer: "24 cm"
     },
     {
-        q: "Area of a square with side 7 cm is",
-        options: ["14 sq cm", "49 sq cm", "28 sq cm", "21 sq cm"],
-        answer: "49 sq cm"
-    },
-    {
-        q: "Perimeter of rectangle with length 8 cm and breadth 5 cm",
+        q: "A rectangle has length 8 cm and breadth 5 cm. What is its perimeter?",
         options: ["13 cm", "26 cm", "40 cm", "16 cm"],
         answer: "26 cm"
     },
     {
-        q: "Area of rectangle 9 cm × 4 cm",
-        options: ["36 sq cm", "13 sq cm", "18 sq cm", "45 sq cm"],
+        q: "Each side of an equilateral triangle is 9 cm. Find its perimeter.",
+        options: ["18 cm", "27 cm", "36 cm", "9 cm"],
+        answer: "27 cm"
+    },
+    {
+        q: "What is the perimeter of a square whose side is 10 m?",
+        options: ["20 m", "30 m", "40 m", "100 m"],
+        answer: "40 m"
+    },
+    {
+        q: "A rectangle has length 12 m and breadth 3 m. Find its perimeter.",
+        options: ["30 m", "24 m", "36 m", "18 m"],
+        answer: "30 m"
+    },
+    {
+        q: "If the perimeter of a square is 24 cm, what is the length of one side?",
+        options: ["4 cm", "6 cm", "8 cm", "12 cm"],
+        answer: "6 cm"
+    },
+    {
+        q: "The perimeter of a rectangle is 30 cm. If the length is 8 cm, find the breadth.",
+        options: ["7 cm", "8 cm", "15 cm", "4 cm"],
+        answer: "7 cm"
+    },
+    {
+        q: "A triangle has sides 5 cm, 7 cm, and 8 cm. Find its perimeter.",
+        options: ["18 cm", "20 cm", "15 cm", "10 cm"],
+        answer: "20 cm"
+    },
+    {
+        q: "Each side of a shape is 4 cm and its perimeter is 20 cm. How many sides does it have?",
+        options: ["4", "5", "6", "8"],
+        answer: "5"
+    },
+    {
+        q: "Find the area of a square with side 7 cm.",
+        options: ["14 sq cm", "21 sq cm", "49 sq cm", "28 sq cm"],
+        answer: "49 sq cm"
+    },
+    {
+        q: "What is the area of a rectangle of length 9 cm and breadth 4 cm?",
+        options: ["13 sq cm", "36 sq cm", "18 sq cm", "45 sq cm"],
         answer: "36 sq cm"
     },
     {
-        q: "If perimeter of square is 16 cm, area is",
-        options: ["16 sq cm", "4 sq cm", "64 sq cm", "8 sq cm"],
-        answer: "16 sq cm"
+        q: "A square has side 5 m. What is its area?",
+        options: ["10 sq m", "20 sq m", "25 sq m", "15 sq m"],
+        answer: "25 sq m"
+    },
+    {
+        q: "The area of a rectangle is 24 sq cm. If the length is 6 cm, find the breadth.",
+        options: ["2 cm", "3 cm", "4 cm", "6 cm"],
+        answer: "4 cm"
+    },
+    {
+        q: "Find the area of a rectangle with length 10 m and breadth 2 m.",
+        options: ["12 sq m", "20 sq m", "24 sq m", "40 sq m"],
+        answer: "20 sq m"
+    },
+    {
+        q: "The area of a square is 36 sq cm. Find the length of one side.",
+        options: ["12 cm", "6 cm", "9 cm", "18 cm"],
+        answer: "6 cm"
+    },
+    {
+        q: "A rectangular garden is 12 m long and 5 m wide. Find its area.",
+        options: ["17 sq m", "60 sq m", "120 sq m", "30 sq m"],
+        answer: "60 sq m"
+    },
+    {
+        q: "Area is measured in",
+        options: ["cm", "m", "square units", "units"],
+        answer: "square units"
+    },
+    {
+        q: "Perimeter is measured in",
+        options: ["square units", "cm²", "units", "cubic units"],
+        answer: "units"
+    },
+    {
+        q: "If the side of a square is doubled, its area becomes",
+        options: ["Double", "Triple", "Four times", "Same"],
+        answer: "Four times"
+    },
+    {
+        q: "Can two rectangles have the same area but different perimeters?",
+        options: ["Yes", "No", "Only squares", "Only triangles"],
+        answer: "Yes"
     }
 ];
-
-let index = 0;
-let timeLeft = 120;
-let timer;
-let userAnswers = [];
-
-function loadQuestion() {
-    clearInterval(timer);
-    timeLeft = 120;
-    document.getElementById("time").innerText = timeLeft;
-
-    const q = quiz[index];
-    document.getElementById("question").innerText = `Q${index+1}. ${q.q}`;
-
-    const optDiv = document.getElementById("options");
-    optDiv.innerHTML = "";
-
-    q.options.forEach(opt => {
-        optDiv.innerHTML += `
-        <label>
-            <input type="radio" name="option" value="${opt}">
-            ${opt}
-        </label>`;
-    });
-
-    timer = setInterval(() => {
-        timeLeft--;
-        document.getElementById("time").innerText = timeLeft;
-        if (timeLeft === 0) nextQuestion();
-    }, 1000);
-}
-
-function nextQuestion() {
-    clearInterval(timer);
-
-    const selected = document.querySelector('input[name="option"]:checked');
-    userAnswers.push(selected ? selected.value : "Not Answered");
-
-    index++;
-    if (index < quiz.length) {
-        loadQuestion();
-    } else {
-        showResult();
-    }
-}
-
-function showResult() {
-    let score = 0;
-    let resultHTML = `<h2>Result Summary</h2>`;
-
-    quiz.forEach((q, i) => {
-        let status;
-        if (userAnswers[i] === q.answer) {
-            status = `<span class="correct">✔ Correct</span>`;
-            score++;
-        } else {
-            status = `<span class="wrong">❌ Wrong</span>`;
-        }
-
-        resultHTML += `
-        <p>
-            <b>Q${i+1}:</b> ${q.q}<br>
-            Your Answer: ${userAnswers[i]}<br>
-            Correct Answer: ${q.answer}<br>
-            ${status} (1 Mark)
-        </p>
-        <hr>`;
-    });
-
-    resultHTML += `<h3>Total Marks: ${score} / ${quiz.length}</h3>`;
-
-    document.getElementById("quizBox").innerHTML = resultHTML;
-}
-
-loadQuestion();
 </script>
-
-</body>
-</html>
