--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Class 6 Area & Perimeter Test</title>
+<meta charset="UTF-8">
+<title>Class 6 Area & Perimeter Online Test</title>
 
 <style>
 body {
@@ -10,32 +11,47 @@ body {
     padding: 20px;
 }
 .quiz-box {
-    background: white;
+    background: #ffffff;
     padding: 25px;
-    max-width: 750px;
+    max-width: 800px;
     margin: auto;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 12px rgba(0,0,0,0.15);
 }
 .timer {
     color: red;
     font-weight: bold;
+    margin-bottom: 15px;
 }
 .options label {
     display: block;
     margin: 8px 0;
+    cursor: pointer;
 }
 button {
     margin-top: 15px;
-    padding: 10px 20px;
+    padding: 10px 25px;
     background: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
 }
-.correct { color: green; font-weight: bold; }
-.wrong { color: red; font-weight: bold; }
+button:hover {
+    background: #0056b3;
+}
+.correct {
+    color: green;
+    font-weight: bold;
+}
+.wrong {
+    color: red;
+    font-weight: bold;
+}
+hr {
+    margin: 15px 0;
+}
 </style>
 </head>
 
@@ -43,7 +59,9 @@ button {
 
 <div class="quiz-box" id="quizBox">
     <h2 id="question"></h2>
-    <div class="timer">Time Left: <span id="time">120</span> sec</div>
+    <div class="timer">
+        Time Left: <span id="time">120</span> seconds
+    </div>
     <div id="options" class="options"></div>
     <button onclick="nextQuestion()">Next</button>
 </div>
@@ -151,11 +169,10 @@ const quiz = [
         answer: "May be same or different"
     }
 ];
-</script>
 
 let index = 0;
-let timeLeft = 120;
 let timer;
+let timeLeft = 120;
 let userAnswers = [];
 
 function loadQuestion() {
@@ -164,17 +181,17 @@ function loadQuestion() {
     document.getElementById("time").innerText = timeLeft;
 
     const q = quiz[index];
-    document.getElementById("question").innerText = `Q${index+1}. ${q.q}`;
+    document.getElementById("question").innerText = `Q${index + 1}. ${q.q}`;
 
-    const optDiv = document.getElementById("options");
-    optDiv.innerHTML = "";
+    const optionsDiv = document.getElementById("options");
+    optionsDiv.innerHTML = "";
 
     q.options.forEach(opt => {
-        optDiv.innerHTML += `
-        <label>
-            <input type="radio" name="option" value="${opt}">
-            ${opt}
-        </label>`;
+        optionsDiv.innerHTML += `
+            <label>
+                <input type="radio" name="option" value="${opt}">
+                ${opt}
+            </label>`;
     });
 
     timer = setInterval(() => {
@@ -200,30 +217,27 @@ function nextQuestion() {
 
 function showResult() {
     let score = 0;
-    let resultHTML = `<h2>Result Summary</h2>`;
+    let html = `<h2>Result Summary</h2>`;
 
     quiz.forEach((q, i) => {
-        let status;
-        if (userAnswers[i] === q.answer) {
-            status = `<span class="correct">✔ Correct</span>`;
-            score++;
-        } else {
-            status = `<span class="wrong">❌ Wrong</span>`;
-        }
+        const isCorrect = userAnswers[i] === q.answer;
+        if (isCorrect) score++;
 
-        resultHTML += `
-        <p>
-            <b>Q${i+1}:</b> ${q.q}<br>
-            Your Answer: ${userAnswers[i]}<br>
-            Correct Answer: ${q.answer}<br>
-            ${status} (1 Mark)
-        </p>
-        <hr>`;
+        html += `
+            <p>
+                <b>Q${i + 1}:</b> ${q.q}<br>
+                Your Answer: ${userAnswers[i]}<br>
+                Correct Answer: ${q.answer}<br>
+                <span class="${isCorrect ? 'correct' : 'wrong'}">
+                    ${isCorrect ? '✔ Correct' : '❌ Wrong'}
+                </span> (1 Mark)
+            </p>
+            <hr>
+        `;
     });
 
-    resultHTML += `<h3>Total Marks: ${score} / ${quiz.length}</h3>`;
-
-    document.getElementById("quizBox").innerHTML = resultHTML;
+    html += `<h3>Total Marks: ${score} / ${quiz.length}</h3>`;
+    document.getElementById("quizBox").innerHTML = html;
 }
 
 loadQuestion();
