--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Class 6 Area & Perimeter Online Test</title>
+<title>Class 6 Area & Perimeter – Difficult Test</title>
 
 <style>
 body {
@@ -69,104 +69,54 @@ hr {
 <script>
 const quiz = [
     {
-        q: "The side of a square is 11 cm. What is its perimeter?",
-        options: ["22 cm", "33 cm", "44 cm", "121 cm"],
-        answer: "44 cm"
-    },
-    {
-        q: "A rectangle has length 14 cm and breadth 6 cm. Find its perimeter.",
-        options: ["20 cm", "28 cm", "40 cm", "42 cm"],
-        answer: "40 cm"
-    },
-    {
-        q: "Each side of a regular pentagon is 5 cm. What is its perimeter?",
-        options: ["20 cm", "25 cm", "30 cm", "35 cm"],
-        answer: "25 cm"
-    },
-    {
-        q: "The perimeter of a square is 36 cm. Find the length of one side.",
-        options: ["6 cm", "9 cm", "12 cm", "18 cm"],
-        answer: "9 cm"
-    },
-    {
-        q: "A rectangle has perimeter 50 cm. If its length is 15 cm, find its breadth.",
-        options: ["10 cm", "5 cm", "20 cm", "25 cm"],
-        answer: "10 cm"
-    },
-    {
-        q: "Find the area of a square whose side is 8 cm.",
-        options: ["16 sq cm", "32 sq cm", "64 sq cm", "24 sq cm"],
-        answer: "64 sq cm"
-    },
-    {
-        q: "What is the area of a rectangle 7 cm long and 5 cm wide?",
-        options: ["12 sq cm", "35 sq cm", "70 sq cm", "25 sq cm"],
-        answer: "35 sq cm"
-    },
-    {
-        q: "The area of a square is 81 sq cm. Find the length of one side.",
-        options: ["8 cm", "9 cm", "18 cm", "27 cm"],
-        answer: "9 cm"
-    },
-    {
-        q: "The area of a rectangle is 40 sq cm. If its breadth is 5 cm, find its length.",
-        options: ["5 cm", "8 cm", "10 cm", "20 cm"],
+        q: "A rectangle has the same perimeter as a square of side 10 cm. If the length of the rectangle is 12 cm, what is its breadth?",
+        options: ["6 cm", "8 cm", "10 cm", "4 cm"],
         answer: "8 cm"
     },
     {
-        q: "A garden is 20 m long and 4 m wide. What is its area?",
-        options: ["24 sq m", "80 sq m", "40 sq m", "60 sq m"],
-        answer: "80 sq m"
+        q: "The perimeter of a square is increased by 16 cm. By how much does the side of the square increase?",
+        options: ["2 cm", "4 cm", "6 cm", "8 cm"],
+        answer: "4 cm"
     },
     {
-        q: "The side of a square is 15 m. What is its area?",
-        options: ["30 sq m", "225 sq m", "60 sq m", "150 sq m"],
-        answer: "225 sq m"
+        q: "A rectangular field has an area of 96 sq m. If its length is three times its breadth, find the perimeter.",
+        options: ["40 m", "48 m", "56 m", "64 m"],
+        answer: "48 m"
     },
     {
-        q: "Which shape has the smallest perimeter if all sides are 6 cm?",
-        options: ["Square", "Triangle", "Rectangle", "Pentagon"],
-        answer: "Triangle"
+        q: "Two squares have sides in the ratio 1 : 3. What is the ratio of their areas?",
+        options: ["1 : 3", "1 : 6", "1 : 9", "3 : 9"],
+        answer: "1 : 9"
     },
     {
-        q: "A rectangle has length 9 cm and breadth 3 cm. What is its area?",
-        options: ["12 sq cm", "27 sq cm", "18 sq cm", "36 sq cm"],
-        answer: "27 sq cm"
+        q: "A square and a rectangle have the same area. The rectangle is 12 cm long and 3 cm wide. What is the perimeter of the square?",
+        options: ["24 cm", "36 cm", "48 cm", "60 cm"],
+        answer: "24 cm"
     },
     {
-        q: "The perimeter of a triangle is 21 cm. If two sides are 7 cm each, find the third side.",
-        options: ["5 cm", "6 cm", "7 cm", "8 cm"],
-        answer: "7 cm"
+        q: "The perimeter of a rectangle is 60 cm. If its length is double its breadth, find its area.",
+        options: ["200 sq cm", "216 sq cm", "240 sq cm", "180 sq cm"],
+        answer: "200 sq cm"
     },
     {
-        q: "If the length of a rectangle is doubled, its area becomes",
-        options: ["Same", "Double", "Four times", "Half"],
-        answer: "Double"
+        q: "How many square tiles of side 2 m are required to cover a rectangular floor 12 m long and 8 m wide?",
+        options: ["12", "24", "48", "96"],
+        answer: "24"
     },
     {
-        q: "How many square tiles of side 1 m are needed to cover a floor of area 12 sq m?",
-        options: ["6", "10", "12", "24"],
-        answer: "12"
+        q: "A wire of length 88 cm is bent to form a square and then a rectangle of length 24 cm. What is the breadth of the rectangle?",
+        options: ["18 cm", "20 cm", "22 cm", "16 cm"],
+        answer: "20 cm"
     },
     {
-        q: "The perimeter of a square is 48 cm. What is its area?",
-        options: ["144 sq cm", "192 sq cm", "256 sq cm", "576 sq cm"],
-        answer: "144 sq cm"
+        q: "The area of a square is equal to the area of a rectangle 20 cm × 5 cm. What is the perimeter of the square?",
+        options: ["40 cm", "50 cm", "60 cm", "80 cm"],
+        answer: "40 cm"
     },
     {
-        q: "A rectangular field is 18 m long and 10 m wide. Find its perimeter.",
-        options: ["36 m", "46 m", "56 m", "28 m"],
-        answer: "56 m"
-    },
-    {
-        q: "Which unit is suitable to measure the area of a classroom?",
-        options: ["cm", "m", "sq m", "sq cm"],
-        answer: "sq m"
-    },
-    {
-        q: "Two rectangles have the same perimeter. Their areas are",
-        options: ["Always same", "Always different", "May be same or different", "Zero"],
-        answer: "May be same or different"
+        q: "A rectangular park is surrounded by a path 2 m wide on the outside. If the outer dimensions are 24 m × 18 m, find the area of the path.",
+        options: ["144 sq m", "160 sq m", "176 sq m", "192 sq m"],
+        answer: "176 sq m"
     }
 ];
 
